internal/scenarios/httproute/manifests/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: bnk-gatewayclass
spec:
  controllerName: f5.com/default-f5-cne-controller
  description: "F5 BIG-IP Kubernetes Gateway managed by FLO"
